add golang testing to ci

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2312,6 +2312,291 @@
       "199.19 self.buy_entry_price\n",
       "220.94 current close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 214.44817638235972\n",
+      " Lookback = 30_TCN Prediction = 220.80708025428635\n",
+      " Lookback = 45_TCN Prediction = 222.96682523601345\n",
+      " Lookback = 15_NBEATS Prediction = 212.78694833934472\n",
+      " Lookback = 30_NBEATS Prediction = 224.96776169783968\n",
+      " Lookback = 45_NBEATS Prediction = 231.82782494167688\n",
+      "221.30076947525347 ml_pred\n",
+      "buy_to_no_position\n",
+      "Won 21.75 on this trade\n",
+      "23 days in trade\n",
+      "Average days in trades = 8.333333333333334\n",
+      "Bat rate buy so far = 0.3333333333333333\n",
+      "Win rate buy so far = 0.692719840919134\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 4, 'n_short_won': 0, 'n_buy_won': 2, '$_short_lost': 0, '$_buy_lost': 55.62999999999997, '$_short_won': 0, '$_buy_won': 125.41}\n",
+      "Total days in trades = 50\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-09 00:00:00 current date\n",
+      "210.49 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 208.25319430034745\n",
+      " Lookback = 30_TCN Prediction = 208.71131573327855\n",
+      " Lookback = 45_TCN Prediction = 230.55364391167825\n",
+      " Lookback = 15_NBEATS Prediction = 220.45565961292357\n",
+      " Lookback = 30_NBEATS Prediction = 206.21564138005502\n",
+      " Lookback = 45_NBEATS Prediction = 209.00851886396873\n",
+      "213.8663289670419 ml prediction day\n",
+      "223.612 mean\n",
+      "Eval buy took 1.820943284034729 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-14 00:00:00 current date\n",
+      "186.61 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 186.2917451235719\n",
+      " Lookback = 30_TCN Prediction = 194.96061241085255\n",
+      " Lookback = 45_TCN Prediction = 206.28894961996087\n",
+      " Lookback = 15_NBEATS Prediction = 227.39148454697363\n",
+      " Lookback = 30_NBEATS Prediction = 229.94560330117451\n",
+      " Lookback = 45_NBEATS Prediction = 233.5354503805968\n",
+      "213.06897423052172 ml prediction day\n",
+      "205.88600000000002 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 1.759279767672221 minutes\n",
+      "Updating stop loss to 169.65\n",
+      "188.5 row close\n",
+      "Updating stop loss to 175.04100000000003\n",
+      "194.49 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-08-18 00:00:00 current date\n",
+      "188.14600000000002 mean\n",
+      "186.61 self.buy_entry_price\n",
+      "194.49 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 176.9902602005691\n",
+      " Lookback = 30_TCN Prediction = 190.20317799765525\n",
+      " Lookback = 45_TCN Prediction = 205.79052560783288\n",
+      " Lookback = 15_NBEATS Prediction = 183.33956444492463\n",
+      " Lookback = 30_NBEATS Prediction = 201.9379448987725\n",
+      " Lookback = 45_NBEATS Prediction = 188.6341697135394\n",
+      "191.14927381054898 ml_pred\n",
+      "Updating stop loss to 182.781\n",
+      "203.09 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-08-19 00:00:00 current date\n",
+      "191.442 mean\n",
+      "186.61 self.buy_entry_price\n",
+      "203.09 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 182.15998883089503\n",
+      " Lookback = 30_TCN Prediction = 190.0529519429665\n",
+      " Lookback = 45_TCN Prediction = 192.50111731337063\n",
+      " Lookback = 15_NBEATS Prediction = 188.96623565886455\n",
+      " Lookback = 30_NBEATS Prediction = 219.1668297162175\n",
+      " Lookback = 45_NBEATS Prediction = 204.53363053565045\n",
+      "196.23012566632747 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-08-21 00:00:00 current date\n",
+      "193.346 mean\n",
+      "186.61 self.buy_entry_price\n",
+      "186.89 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 170.80913537878718\n",
+      " Lookback = 30_TCN Prediction = 182.3746375607688\n",
+      " Lookback = 45_TCN Prediction = 182.81768996092936\n",
+      " Lookback = 15_NBEATS Prediction = 189.99831526858463\n",
+      " Lookback = 30_NBEATS Prediction = 218.1615050876154\n",
+      " Lookback = 45_NBEATS Prediction = 226.80735101128815\n",
+      "195.16143904466227 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-08-22 00:00:00 current date\n",
+      "194.474 mean\n",
+      "186.61 self.buy_entry_price\n",
+      "191.33 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 188.53068329754385\n",
+      " Lookback = 30_TCN Prediction = 189.97220506751776\n",
+      " Lookback = 45_TCN Prediction = 190.7829969919919\n",
+      " Lookback = 15_NBEATS Prediction = 179.38355470682123\n",
+      " Lookback = 30_NBEATS Prediction = 194.32185471504263\n",
+      " Lookback = 45_NBEATS Prediction = 218.00054006952107\n",
+      "193.49863914140641 ml_pred\n",
+      "buy_to_no_position\n",
+      "Won 4.719999999999999 on this trade\n",
+      "8 days in trade\n",
+      "Average days in trades = 8.285714285714286\n",
+      "Bat rate buy so far = 0.42857142857142855\n",
+      "Win rate buy so far = 0.7005275624461672\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 4, 'n_short_won': 0, 'n_buy_won': 3, '$_short_lost': 0, '$_buy_lost': 55.62999999999997, '$_short_won': 0, '$_buy_won': 130.13}\n",
+      "Total days in trades = 58\n",
+      "----------\n",
+      "buy\n",
+      "2019-08-28 00:00:00 current date\n",
+      "173.89 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 169.44242723323123\n",
+      " Lookback = 30_TCN Prediction = 179.74345952275473\n",
+      " Lookback = 45_TCN Prediction = 160.55026179186643\n",
+      " Lookback = 15_NBEATS Prediction = 211.70432075268707\n",
+      " Lookback = 30_NBEATS Prediction = 196.9987382996307\n",
+      " Lookback = 45_NBEATS Prediction = 205.3491375138064\n",
+      "187.2980575189961 ml prediction day\n",
+      "185.69400000000002 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 2.605982796351115 minutes\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-08-29 00:00:00 current date\n",
+      "181.34 mean\n",
+      "173.89 self.buy_entry_price\n",
+      "169.52 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 161.49270945292864\n",
+      " Lookback = 30_TCN Prediction = 173.464344524599\n",
+      " Lookback = 45_TCN Prediction = 166.67234395535462\n",
+      " Lookback = 15_NBEATS Prediction = 182.3647007892141\n",
+      " Lookback = 30_NBEATS Prediction = 189.36766928311266\n",
+      " Lookback = 45_NBEATS Prediction = 192.0645008575023\n",
+      "177.5710448104519 ml_pred\n",
+      "buy_to_no_position\n",
+      "Lost 4.369999999999976 on this trade\n",
+      "1 days in trade\n",
+      "Average days in trades = 7.375\n",
+      "Bat rate buy so far = 0.375\n",
+      "Win rate buy so far = 0.6844264450639038\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 5, 'n_short_won': 0, 'n_buy_won': 3, '$_short_lost': 0, '$_buy_lost': 59.99999999999994, '$_short_won': 0, '$_buy_won': 130.13}\n",
+      "Total days in trades = 59\n",
+      "----------\n",
+      "buy\n",
+      "2019-09-06 00:00:00 current date\n",
+      "169.96 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 169.81065810516463\n",
+      " Lookback = 30_TCN Prediction = 162.85780943328584\n",
+      " Lookback = 45_TCN Prediction = 162.90494985323915\n",
+      " Lookback = 15_NBEATS Prediction = 180.14085908385118\n",
+      " Lookback = 30_NBEATS Prediction = 174.41088351738242\n",
+      " Lookback = 45_NBEATS Prediction = 175.4551413807546\n",
+      "170.93005022894633 ml prediction day\n",
+      "175.60399999999998 mean\n",
+      "Eval buy took 1.7933736522992452 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-09-23 00:00:00 current date\n",
+      "201.92 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 190.16233657463457\n",
+      " Lookback = 30_TCN Prediction = 202.76532937807733\n",
+      " Lookback = 45_TCN Prediction = 196.73426650656103\n",
+      " Lookback = 15_NBEATS Prediction = 230.62716083099832\n",
+      " Lookback = 30_NBEATS Prediction = 181.06530146189772\n",
+      " Lookback = 45_NBEATS Prediction = 207.90285623705446\n",
+      "201.54287516487057 ml prediction day\n",
+      "213.664 mean\n",
+      "Eval buy took 1.8777286489804585 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-10-16 00:00:00 current date\n",
+      "176.01 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 169.99071554768835\n",
+      " Lookback = 30_TCN Prediction = 174.2208086154195\n",
+      " Lookback = 45_TCN Prediction = 171.35906951810185\n",
+      " Lookback = 15_NBEATS Prediction = 180.64537347612287\n",
+      " Lookback = 30_NBEATS Prediction = 181.55704388368486\n",
+      " Lookback = 45_NBEATS Prediction = 189.03345700663024\n",
+      "177.80107800794124 ml prediction day\n",
+      "181.458 mean\n",
+      "Eval buy took 2.0663241505622865 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-10-23 00:00:00 current date\n",
+      "162.4 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 160.2018643572194\n",
+      " Lookback = 30_TCN Prediction = 148.7699308999883\n",
+      " Lookback = 45_TCN Prediction = 163.8713454581871\n",
+      " Lookback = 15_NBEATS Prediction = 182.2802549366367\n",
+      " Lookback = 30_NBEATS Prediction = 172.9239937170452\n",
+      " Lookback = 45_NBEATS Prediction = 194.87760938575096\n",
+      "170.48749979247128 ml prediction day\n",
+      "171.61200000000002 mean\n",
+      "Eval buy took 1.9962886174519856 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-03 00:00:00 current date\n",
+      "182.43 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 180.78190244707386\n",
+      " Lookback = 30_TCN Prediction = 174.555903116766\n",
+      " Lookback = 45_TCN Prediction = 164.958743303172\n",
+      " Lookback = 15_NBEATS Prediction = 182.236623859673\n",
+      " Lookback = 30_NBEATS Prediction = 189.888659680126\n",
+      " Lookback = 45_NBEATS Prediction = 189.1767231162443\n",
+      "180.2664259205092 ml prediction day\n",
+      "183.798 mean\n",
+      "Eval buy took 2.4292614499727887 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-08 00:00:00 current date\n",
+      "184.21 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 177.9992379593829\n",
+      " Lookback = 30_TCN Prediction = 176.65851167253643\n",
+      " Lookback = 45_TCN Prediction = 172.08995073811778\n",
+      " Lookback = 15_NBEATS Prediction = 221.23263056957424\n",
+      " Lookback = 30_NBEATS Prediction = 201.48919508887465\n",
+      " Lookback = 45_NBEATS Prediction = 176.81761914395116\n",
+      "187.7145241954062 ml prediction day\n",
+      "187.888 mean\n",
+      "Eval buy took 2.2314672311147055 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-15 00:00:00 current date\n",
+      "180.52 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 177.43036552697578\n",
+      " Lookback = 30_TCN Prediction = 179.307788824683\n",
+      " Lookback = 45_TCN Prediction = 176.28307533524028\n",
+      " Lookback = 15_NBEATS Prediction = 191.96827085958623\n",
+      " Lookback = 30_NBEATS Prediction = 185.7420607583075\n",
+      " Lookback = 45_NBEATS Prediction = 200.02519615047663\n",
+      "185.12612624254493 ml prediction day\n",
+      "185.422 mean\n",
+      "Eval buy took 2.397989551226298 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-19 00:00:00 current date\n",
+      "177.46 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 171.7236060003273\n",
+      " Lookback = 30_TCN Prediction = 170.8437123231032\n",
+      " Lookback = 45_TCN Prediction = 176.2998157294596\n",
+      " Lookback = 15_NBEATS Prediction = 192.23129564790685\n",
+      " Lookback = 30_NBEATS Prediction = 170.82879106955747\n",
+      " Lookback = 45_NBEATS Prediction = 191.35849723392613\n",
+      "178.88095300071345 ml prediction day\n",
+      "181.402 mean\n",
+      "Eval buy took 2.001779568195343 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-11-21 00:00:00 current date\n",
+      "161.46 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
