github actions for golang

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2597,6 +2597,66 @@
       "2019-11-21 00:00:00 current date\n",
       "161.46 close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 165.65628971976108\n",
+      " Lookback = 30_TCN Prediction = 167.6395232645309\n",
+      " Lookback = 45_TCN Prediction = 154.59413733731773\n",
+      " Lookback = 15_NBEATS Prediction = 186.561752634969\n",
+      " Lookback = 30_NBEATS Prediction = 181.74878870767427\n",
+      " Lookback = 45_NBEATS Prediction = 192.48965294535327\n",
+      "174.7816907682677 ml prediction day\n",
+      "176.06 mean\n",
+      "Eval buy took 2.2005473812421164 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-02 00:00:00 current date\n",
+      "149.06 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 141.81172802103845\n",
+      " Lookback = 30_TCN Prediction = 150.79971962719006\n",
+      " Lookback = 45_TCN Prediction = 150.65657449759158\n",
+      " Lookback = 15_NBEATS Prediction = 135.48926075390057\n",
+      " Lookback = 30_NBEATS Prediction = 163.94941310582226\n",
+      " Lookback = 45_NBEATS Prediction = 147.73149451892283\n",
+      "148.40636508741093 ml prediction day\n",
+      "151.962 mean\n",
+      "Eval buy took 2.3730016867319743 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-10 00:00:00 current date\n",
+      "146.27 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 134.54559026621752\n",
+      " Lookback = 30_TCN Prediction = 145.03251550466678\n",
+      " Lookback = 45_TCN Prediction = 143.59408618927768\n",
+      " Lookback = 15_NBEATS Prediction = 142.38211301670813\n",
+      " Lookback = 30_NBEATS Prediction = 145.2519371678595\n",
+      " Lookback = 45_NBEATS Prediction = 175.186056432223\n",
+      "147.66538309615876 ml prediction day\n",
+      "148.744 mean\n",
+      "Eval buy took 2.4380759318669636 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-14 00:00:00 current date\n",
+      "142.87 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 133.1602879307596\n",
+      " Lookback = 30_TCN Prediction = 140.11182310793646\n",
+      " Lookback = 45_TCN Prediction = 146.70907389357222\n",
+      " Lookback = 15_NBEATS Prediction = 129.52134406469136\n",
+      " Lookback = 30_NBEATS Prediction = 159.23522805302892\n",
+      " Lookback = 45_NBEATS Prediction = 147.4997815999379\n",
+      "142.7062564416544 ml prediction day\n",
+      "144.65800000000002 mean\n",
+      "Eval buy took 2.470451231797536 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2019-12-16 00:00:00 current date\n",
+      "133.61 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
