--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2657,6 +2657,24 @@
       "2019-12-16 00:00:00 current date\n",
       "133.61 close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 126.6576880557772\n",
+      " Lookback = 30_TCN Prediction = 133.7582119645952\n",
+      " Lookback = 45_TCN Prediction = 137.64963726387268\n",
+      " Lookback = 15_NBEATS Prediction = 139.92250899695085\n",
+      " Lookback = 30_NBEATS Prediction = 160.54072223703642\n",
+      " Lookback = 45_NBEATS Prediction = 163.618932507534\n",
+      "143.69128350429438 ml prediction day\n",
+      "142.026 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 2.3860988140106203 minutes\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2019-12-17 00:00:00 current date\n",
+      "137.426 mean\n",
+      "133.61 self.buy_entry_price\n",
+      "122.6 current close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
