--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2675,6 +2675,53 @@
       "133.61 self.buy_entry_price\n",
       "122.6 current close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 125.79907762822552\n",
+      " Lookback = 30_TCN Prediction = 116.87434977581978\n",
+      " Lookback = 45_TCN Prediction = 120.49271714302854\n",
+      " Lookback = 15_NBEATS Prediction = 133.50877667094807\n",
+      " Lookback = 30_NBEATS Prediction = 129.72929435514908\n",
+      " Lookback = 45_NBEATS Prediction = 146.79827005224965\n",
+      "128.8670809375701 ml_pred\n",
+      "buy_to_no_position\n",
+      "Lost 11.01000000000002 on this trade\n",
+      "1 days in trade\n",
+      "Average days in trades = 6.666666666666667\n",
+      "Bat rate buy so far = 0.3333333333333333\n",
+      "Win rate buy so far = 0.6469623148056082\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 6, 'n_short_won': 0, 'n_buy_won': 3, '$_short_lost': 0, '$_buy_lost': 71.00999999999996, '$_short_won': 0, '$_buy_won': 130.13}\n",
+      "Total days in trades = 60\n",
+      "----------\n",
+      "buy\n",
+      "2020-01-02 00:00:00 current date\n",
+      "127.41 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 123.0652789648581\n",
+      " Lookback = 30_TCN Prediction = 125.92898900087523\n",
+      " Lookback = 45_TCN Prediction = 131.3413541517249\n",
+      " Lookback = 15_NBEATS Prediction = 142.04842839261434\n",
+      " Lookback = 30_NBEATS Prediction = 137.39289000113567\n",
+      " Lookback = 45_NBEATS Prediction = 132.6206465848758\n",
+      "132.066264516014 ml prediction day\n",
+      "131.04199999999997 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 2.818096601963043 minutes\n",
+      "Updating stop loss to 120.75299999999999\n",
+      "134.17 row close\n",
+      "Updating stop loss to 121.563\n",
+      "135.07 row close\n",
+      "Updating stop loss to 122.652\n",
+      "136.28 row close\n",
+      "Updating stop loss to 129.87\n",
+      "144.3 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2020-01-06 00:00:00 current date\n",
+      "135.446 mean\n",
+      "127.41 self.buy_entry_price\n",
+      "144.3 current close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
