--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 27,
    "id": "51b56636-6aec-4275-a855-237dd410abff",
    "metadata": {},
    "outputs": [
@@ -66,6 +66,16 @@
     "\n",
     "\n",
     "%pylab inline"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "760649f2-3faa-4893-b9f8-060327c58bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# test"
    ]
   },
   {
