do not save checkpoints

--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -2,26 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "51b56636-6aec-4275-a855-237dd410abff",
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Importing plotly failed. Interactive plots will not work.\n"
-     ]
-    },
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'GaussianLikelihoodModel' from 'darts.utils.likelihood_models' (/Users/jonathanhilgart/Library/Caches/pypoetry/virtualenvs/go-trader-aTWd7ZB6-py3.8/lib/python3.8/site-packages/darts/utils/likelihood_models.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/0r/jkhwtgvx0wb9vrk6xn4bmz2m0000gn/T/ipykernel_7953/3960125735.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmodels\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mRNNModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTCNModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mTransformerModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNBEATSModel\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBlockRNNModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmissing_values\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mfill_missing_values\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 29\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mutils\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mlikelihood_models\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mGaussianLikelihoodModel\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     30\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     31\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mdarts\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmetrics\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmape\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mmse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'GaussianLikelihoodModel' from 'darts.utils.likelihood_models' (/Users/jonathanhilgart/Library/Caches/pypoetry/virtualenvs/go-trader-aTWd7ZB6-py3.8/lib/python3.8/site-packages/darts/utils/likelihood_models.py)"
+      "Populating the interactive namespace from numpy and matplotlib\n"
      ]
     }
    ],
@@ -54,7 +43,7 @@
     "from darts.dataprocessing.transformers import Scaler\n",
     "from darts.models import RNNModel, TCNModel, TransformerModel, NBEATSModel, BlockRNNModel\n",
     "from darts.utils.missing_values import fill_missing_values\n",
-    "from darts.utils.likelihood_models import GaussianLikelihoodModel\n",
+    "# from darts.utils.likelihood_models import GaussianLikelihoodModel\n",
     "\n",
     "from darts.metrics import mape, mse\n",
     "from darts.utils.statistics import check_seasonality, plot_acf\n",
@@ -78,6 +67,24 @@
     "\n",
     "%pylab inline"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "40ee19a0-95d3-4956-9c29-6ecbed3958ff",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "NBEATSModel()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d986f5d7-06bd-4aab-9481-8b5e7f8ee3ee",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
