--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1418,6 +1418,111 @@
       "2020-08-11 00:00:00 current date\n",
       "11410.53 close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 13627.735273627977\n",
+      " Lookback = 30_TCN Prediction = 17139.77774420238\n",
+      " Lookback = 45_TCN Prediction = 16076.156531291696\n",
+      " Lookback = 15_NBEATS Prediction = 12607.806904559986\n",
+      " Lookback = 30_NBEATS Prediction = 10701.428605237816\n",
+      " Lookback = 45_NBEATS Prediction = 8991.17358470587\n",
+      "13190.679773937622 ml prediction day\n",
+      "11663.98 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 3.0221686641375225 minutes\n",
+      "Updating stop loss to 9847.1905\n",
+      "11584.93 row close\n",
+      "Updating stop loss to 10016.518999999998\n",
+      "11784.14 row close\n",
+      "Updating stop loss to 10085.845000000001\n",
+      "11865.7 row close\n",
+      "Updating stop loss to 10108.88\n",
+      "11892.8 row close\n",
+      "Updating stop loss to 10416.24\n",
+      "12254.4 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2020-08-17 00:00:00 current date\n",
+      "11913.182 mean\n",
+      "11410.53 self.buy_entry_price\n",
+      "12254.4 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 13358.284025393656\n",
+      " Lookback = 30_TCN Prediction = 12369.875683265744\n",
+      " Lookback = 45_TCN Prediction = 848.4106577752514\n",
+      " Lookback = 15_NBEATS Prediction = 11817.62211493449\n",
+      " Lookback = 30_NBEATS Prediction = 10312.249425202495\n",
+      " Lookback = 45_NBEATS Prediction = 9100.497097635349\n",
+      "9634.489834034497 ml_pred\n",
+      "buy_to_no_position\n",
+      "Won 843.869999999999 on this trade\n",
+      "6 days in trade\n",
+      "Average days in trades = 6.0\n",
+      "Bat rate buy so far = 1.0\n",
+      "Win rate buy so far = 1.0\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 0, 'n_short_won': 0, 'n_buy_won': 1, '$_short_lost': 0, '$_buy_lost': 0, '$_short_won': 0, '$_buy_won': 843.869999999999}\n",
+      "Total days in trades = 6\n",
+      "----------\n",
+      "buy\n",
+      "2020-08-25 00:00:00 current date\n",
+      "11366.14 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 10876.640305349045\n",
+      " Lookback = 30_TCN Prediction = 12874.22372870554\n",
+      " Lookback = 45_TCN Prediction = 12177.446467770897\n",
+      " Lookback = 15_NBEATS Prediction = 13970.80377700911\n",
+      " Lookback = 30_NBEATS Prediction = 11184.432457943481\n",
+      " Lookback = 45_NBEATS Prediction = 10453.535441609933\n",
+      "11922.847029731334 ml prediction day\n",
+      "11615.982 mean\n",
+      "ml pred higher than mean taking position\n",
+      "Eval buy took 1.4696663856506347 minutes\n",
+      "Updating stop loss to 9765.106\n",
+      "11488.36 row close\n",
+      "Updating stop loss to 9811.125\n",
+      "11542.5 row close\n",
+      "Updating stop loss to 9954.7835\n",
+      "11711.51 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2020-08-30 00:00:00 current date\n",
+      "11514.528 mean\n",
+      "11366.14 self.buy_entry_price\n",
+      "11711.51 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 11073.766545771297\n",
+      " Lookback = 30_TCN Prediction = 14446.350320422032\n",
+      " Lookback = 45_TCN Prediction = 12024.818722807177\n",
+      " Lookback = 15_NBEATS Prediction = 12488.376165834343\n",
+      " Lookback = 30_NBEATS Prediction = 10789.9080799107\n",
+      " Lookback = 45_NBEATS Prediction = 10758.755451935254\n",
+      "11930.329214446801 ml_pred\n",
+      "Updating stop loss to 10174.908\n",
+      "11970.48 row close\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2020-09-01 00:00:00 current date\n",
+      "11682.435999999998 mean\n",
+      "11366.14 self.buy_entry_price\n",
+      "11970.48 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 12223.285418682142\n",
+      " Lookback = 30_TCN Prediction = 10873.12513947634\n",
+      " Lookback = 45_TCN Prediction = 12987.064058282085\n",
+      " Lookback = 15_NBEATS Prediction = 13568.566777331396\n",
+      " Lookback = 30_NBEATS Prediction = 11397.580477566447\n",
+      " Lookback = 45_NBEATS Prediction = 10444.33660816787\n",
+      "11915.65974658438 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2020-09-02 00:00:00 current date\n",
+      "11656.742 mean\n",
+      "11366.14 self.buy_entry_price\n",
+      "11414.03 current close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
