--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1523,6 +1523,57 @@
       "11366.14 self.buy_entry_price\n",
       "11414.03 current close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 11084.185263401665\n",
+      " Lookback = 30_TCN Prediction = 13693.453280434307\n",
+      " Lookback = 45_TCN Prediction = 14333.874210315988\n",
+      " Lookback = 15_NBEATS Prediction = 13262.020937167337\n",
+      " Lookback = 30_NBEATS Prediction = 12486.916977735002\n",
+      " Lookback = 45_NBEATS Prediction = 10266.024905412793\n",
+      "12521.079262411184 ml_pred\n",
+      "---------\n",
+      "checking if we should get out of our buy position\n",
+      "2020-09-03 00:00:00 current date\n",
+      "11404.428 mean\n",
+      "11366.14 self.buy_entry_price\n",
+      "10245.3 current close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 10336.968057454938\n",
+      " Lookback = 30_TCN Prediction = 9471.972586275373\n",
+      " Lookback = 45_TCN Prediction = 13003.555077217003\n",
+      " Lookback = 15_NBEATS Prediction = 12115.009085748288\n",
+      " Lookback = 30_NBEATS Prediction = 10389.051781050033\n",
+      " Lookback = 45_NBEATS Prediction = 10278.290734049498\n",
+      "10932.47455363252 ml_pred\n",
+      "buy_to_no_position\n",
+      "Lost 1120.8400000000001 on this trade\n",
+      "9 days in trade\n",
+      "Average days in trades = 7.5\n",
+      "Bat rate buy so far = 0.5\n",
+      "Win rate buy so far = 0.4295137704801214\n",
+      "WIn / lost dict {'n_short_lost': 0, 'n_buy_lost': 1, 'n_short_won': 0, 'n_buy_won': 1, '$_short_lost': 0, '$_buy_lost': 1120.8400000000001, '$_short_won': 0, '$_buy_won': 843.869999999999}\n",
+      "Total days in trades = 15\n",
+      "----------\n",
+      "buy\n",
+      "2020-09-21 00:00:00 current date\n",
+      "10462.26 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 10010.362054340167\n",
+      " Lookback = 30_TCN Prediction = 10269.815173586998\n",
+      " Lookback = 45_TCN Prediction = 12168.362255872767\n",
+      " Lookback = 15_NBEATS Prediction = 11197.651914365682\n",
+      " Lookback = 30_NBEATS Prediction = 10325.883941676673\n",
+      " Lookback = 45_NBEATS Prediction = 10139.523665698578\n",
+      "10685.266500923479 ml prediction day\n",
+      "10877.692 mean\n",
+      "Eval buy took 0.6940024137496948 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-10-01 00:00:00 current date\n",
+      "10619.45 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
