--- a/notebooks/bollinger_bands_and_coinbase_data.ipynb
+++ b/notebooks/bollinger_bands_and_coinbase_data.ipynb
@@ -1574,6 +1574,36 @@
       "2020-10-01 00:00:00 current date\n",
       "10619.45 close\n",
       "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 10384.407870015668\n",
+      " Lookback = 30_TCN Prediction = 10284.658322276204\n",
+      " Lookback = 45_TCN Prediction = 10525.06838942357\n",
+      " Lookback = 15_NBEATS Prediction = 10175.572586754337\n",
+      " Lookback = 30_NBEATS Prediction = 10307.494772603644\n",
+      " Lookback = 45_NBEATS Prediction = 12424.343746373266\n",
+      "10683.590947907782 ml prediction day\n",
+      "10746.7 mean\n",
+      "Eval buy took 0.7138023336728414 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-10-16 00:00:00 current date\n",
+      "11322.12 close\n",
+      "Creating ML models\n",
+      "1 LEN additional_dfs_sliced\n",
+      " Lookback = 15_TCN Prediction = 10787.951190398164\n",
+      " Lookback = 30_TCN Prediction = 10758.347121841103\n",
+      " Lookback = 45_TCN Prediction = 10974.735378188798\n",
+      " Lookback = 15_NBEATS Prediction = 11142.862246502767\n",
+      " Lookback = 30_NBEATS Prediction = 10177.13100327664\n",
+      " Lookback = 45_NBEATS Prediction = 10533.345438776481\n",
+      "10729.062063163992 ml prediction day\n",
+      "11445.648000000001 mean\n",
+      "Eval buy took 0.8985552986462911 minutes\n",
+      "----------\n",
+      "buy\n",
+      "2020-11-26 00:00:00 current date\n",
+      "17150.62 close\n",
+      "Creating ML models\n",
       "1 LEN additional_dfs_sliced\n"
      ]
     }
